# octo-terra

./: Cargo.toml  LICENSE  README.md
.github/workflows/: Continuous-integration.yml  Formatting-style.yml
assets/models/: box_tri.glb  fern.glb  hp_ico_sphere.glb  p fern.glb  plane.glb  suzanne.glb  suzanne_ss.glb  terrain.glb  tri.glb
assets/vox/: chr_fox.vox  chr_knight.vox  chr_old.vox  chr_sword.vox  doom.vox  menger.vox  monu1.vox  monu10.vox  monu16.vox  monu8.vox  monu9.vox  nature.vox  red_booth_solid.vox  room.vox  street_scene.vox  test box map.vox
crates/prisma_maths/: Cargo.toml
crates/prisma_maths/src/: lib.rs  math_functions.rs  types.rs
crates/terra_render_engine/: Cargo.toml
crates/terra_render_engine/src/: camera.rs  lib.rs  mesh.rs  pixel.rs  ray_tracing.rs  render_engine.rs  retro_bit_map.rs  utility.rs
crates/windowing/: Cargo.toml
crates/windowing/src/: lib.rs
examples/3d_raster/: main.rs
examples/3d_voxel_ray/: main.rs
src/: lib.rs
