[package]
name = "octo-terra"
version = "0.0.1"
authors = ["tofoz"]
edition = "2018"
resolver = "2"

[workspace]
members = ["crates/*"]


[profile.dev]
opt-level = 3
#lto = "thin" 

[profile.release]
opt-level = 3
lto = "fat"
#codegen-units = 1 

[dependencies]
prisma_maths = { path = "./crates/prisma_maths", version = "0.1.0" }
terra_render_engine = { path = "./crates/terra_render_engine", version = "0.1.0" }
windowing = { path = "./crates/windowing", version = "0.1.0" }


[dev-dependencies]
image = "0.23.12"
minifb = "0.19.1"

winit = "0.25.0"
winit_input_helper = "0.10.0"
pixels = "0.5.0"

[[example]]
name = "3d_raster"
path = "examples/3d_raster/main.rs"

[[example]]
name = "3d_voxel_ray"
path = "examples/3d_voxel_ray/main.rs"
