[package]
name = "prisma_maths"
version = "0.1.0"
authors = ["tofox <tristen.rometti.olson@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num = "0.3.1"
glam = "0.12.0"

[dependencies.num]
version = "0.3.1"
